--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'England -- Periodicals'
 - !lcc 'AP'
 - !lcsh 'Scotland -- Periodicals'
+- GITenberg
 title: Blackwood's Edinburgh Magazine, Volume 57, No. 356, June, 1845
 url: http://www.gutenberg.org/ebooks/25207
